loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:20: error: not found: value exit
} while(exit)
        ^